--- a/devops/docker-compose.yml
+++ b/devops/docker-compose.yml
@@ -1,1 +1,51 @@
 version: "3.6"
+networks:
+  devops-net:
+    driver: bridge
+volumes:
+  gitlab-config:
+    name: gitlab-config
+  gitlab-logs:
+    name: gitlab-logs
+  gitlab-data:
+    name: gitlab-data
+services:
+  gitlab:
+    container_name: devops_gitlab
+    image: gitlab/gitlab-ce:latest 
+    restart: always
+    hostname: 'gitlab'
+    environment:
+      GITLAB_OMNIBUS_CONFIG: |
+              external_url 'http://gitlab.devops'
+              gitlab_rails['time_zone'] = 'Asia/Shanghai'
+              gitlab_rails['gitlab_email_enabled'] = true
+              gitlab_rails['gitlab_email_from'] = '926095480@qq.com'
+              gitlab_rails['gitlab_email_display_name'] = 'devops'
+              gitlab_rails['gitlab_email_reply_to'] = '926095480@qq.com'
+              gitlab_rails['gitlab_email_subject_suffix'] = ''
+              gitlab_rails['smtp_enable'] = true
+              gitlab_rails['smtp_address'] = "smtp.qq.com"
+              gitlab_rails['smtp_port'] = 465 
+              gitlab_rails['smtp_user_name'] = "926095480@qq.com"
+              gitlab_rails['smtp_password'] = "wrtjoqscuuvrbchj" 
+              gitlab_rails['smtp_domain'] = "smtp.qq.com"
+              gitlab_rails['smtp_authentication'] = "login"
+              gitlab_rails['smtp_enable_starttls_auto'] = true
+              gitlab_rails['smtp_tls'] = true
+    networks:
+      devops-net:
+        aliases:
+          - gitlab
+    expose:
+      - 80
+    volumes:
+      - gitlab-config:/etc/gitlab/
+      - gitlab-data:/var/opt/gitlab/
+      - gitlab-logs:/var/log/gitlab/
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "500k"
+        max-file: "50"
+  
